# wms-monolithic_with_FastAPI

./: .env  README.md  main.py  pyproject.toml
app/: config.py  database.py
app/dependencies/: auth_deps.py  role_deps.py
app/repositories/: auth_repository.py  cache_repository.py  chat_repository.py
app/routers/: auth_router.py  chat_router.py  inventory_router.py
app/schemas/: auth_schema.py  user_schema.py
app/services/: auth_service.py
